--- a/podcast/templates/podcast/episode_detail.html
+++ b/podcast/templates/podcast/episode_detail.html
@@ -9,15 +9,44 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="{% static 'podcast/episode.css' %}" type="text/css" media="screen"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="{% static 'podcast/player.js' %}" type="text/javascript"></script>
 </head>
 
 <body>
 	<h1>{{ episode.title }}</h1>
 
+	<button type="button" class="btn btn-default" aria-label="Left Align">
+		<span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-play" id="play" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default" aria-label="Left Align">
+		<span class="glyphicon glyphicon-backward" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-volume-down" aria-hidden="true"></span>
+	</button>
+
+	<button type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+	</button>
+
+
+	</br></br>
 	<audio controls="controls">
-		<source src="track.ogg" type="audio/ogg" />
 		<source src="{{ episode.link }}" type="audio/mpeg" />
 		Your browser does not support the audio element.
 	</audio>
