--- a/authentication/templates/authentication/registration.html
+++ b/authentication/templates/authentication/registration.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html lang="en">
 	
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/style.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'authentication/style.css' %}" />
 
 	<head>
         <title>Fabler</title>
