--- a/podcast/static/podcast/episode.css
+++ b/podcast/static/podcast/episode.css
@@ -1,6 +1,24 @@
 .content {
-	background-color: #3a3a3a;
+	background-color: #000000;
 	color: white;
+	font-family: 'Avenir Next', sans-serif;
+
+	margin: 0 auto;
+	margin-top: 75px;
+	padding-top: 0px;
+	width: 750px;
+}
+
+#center {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	padding-left: 10px;
+}
+
+#rightheader {
+	float: right;
+	padding-right: 10px;
 }
 
 .content h1 {
