--- a/podcast/static/podcast/style.css
+++ b/podcast/static/podcast/style.css
@@ -35,6 +35,13 @@ body {
 	background: #3a3a3a;
 }
 
+header {
+	position:relative;
+	width:100%;
+	height:50px;
+	background-color: #000000; 
+}	
+
 footer {
 	background: #3a3a3a;
 	margin-top: 100px;
