--- a/podcast/static/podcast/style.css
+++ b/podcast/static/podcast/style.css
@@ -39,7 +39,8 @@ header {
 	position:relative;
 	width:100%;
 	height:50px;
-	background-color: #000000; 
+	background-color: #000000;
+	display: inline-flex;
 }	
 
 footer {
