Redraw on slider update for Chrome and IE

--- a/podcast/templates/podcast/episode_detail.html
+++ b/podcast/templates/podcast/episode_detail.html
@@ -29,7 +29,7 @@
 			</button>
 			
 			<label for="seek" id="curtime">00:00:00</label>	
-			<input type="range" id="seek" class="form-control" value="0" max="">
+			<input type="range" id="seek" class="form-control" value="0" step="any" max="80">
 			<label for="seek" id="duration">{{ episode.duration }}</label>	
 			<!-- <div id="slider"></div> -->
 
@@ -97,7 +97,9 @@
 			});
 			song.addEventListener('timeupdate',function (){
 				curtime = parseInt(song.currentTime, 10);
-				$("#seek").attr("value", curtime);
+				$("#center #seek").attr("value", curtime);
+				$('#seek').hide().show(0);
+				$("#seek").value = song.currentTime;
 				var sec_num = parseInt(song.currentTime, 10);
 				var hours   = Math.floor(sec_num / 3600);
 				var minutes = Math.floor((sec_num - (hours * 3600)) / 60);
@@ -119,6 +121,38 @@
 				$("#center #curtime").text(currentTime);
 			});
 		
+		$("#seek").mousemove( function(e){
+			var sec_num = parseInt($(this).val(), 10);
+			var hours   = Math.floor(sec_num / 3600);
+			var minutes = Math.floor((sec_num - (hours * 3600)) / 60);
+			var seconds = sec_num - (hours * 3600) - (minutes * 60);
+			if (hours   < 10) {hours   = "0"+hours;}
+			if (minutes < 10) {minutes = "0"+minutes;}
+			if (seconds < 10) {seconds = "0"+seconds;}
+			var currentTime    = hours+':'+minutes+':'+seconds;
+			
+			$("#center #curtime").html(currentTime);
+		});
+		$("#seek").change( function(e){
+			var sec_num = parseInt($(this).val(), 10);
+			var hours   = Math.floor(sec_num / 3600);
+			var minutes = Math.floor((sec_num - (hours * 3600)) / 60);
+			var seconds = sec_num - (hours * 3600) - (minutes * 60);
+			if (hours   < 10) {hours   = "0"+hours;}
+			if (minutes < 10) {minutes = "0"+minutes;}
+			if (seconds < 10) {seconds = "0"+seconds;}
+			var currentTime    = hours+':'+minutes+':'+seconds;
+			
+			$("#center #curtime").html(currentTime);
+		});
+		
+
+
+
+		song.addEventListener('timeupdate', function(){
+
+			});
+	
 	});
 	</script>
 
