--- a/podcast/static/podcast/episode.css
+++ b/podcast/static/podcast/episode.css
@@ -1,13 +1,3 @@
-.content {
-	background-color: #000000;
-	color: white;
-	font-family: 'Avenir Next', sans-serif;
-
-	margin: 0 auto;
-	margin-top: 75px;
-	padding-top: 0px;
-	width: 750px;
-}
 
 #center {
 	position: relative;
@@ -60,6 +50,7 @@
 
 label {
 	margin-left: 1em;
+color: white;
 }
 
 #duration {
@@ -68,4 +59,22 @@ label {
 
 .content h1 {
 	color: white;
+}
+
+.comments {
+	background-color: #000000;
+	color: white;
+	font-family: 'Avenir Next', sans-serif;
+	width: 750px;
+	margin: 0 auto;
+	margin-top: 75px;	
+	padding: 5px;
+}
+
+input, select, textarea{
+	color: black !important;
+}
+
+textarea:focus, input:focus {
+    color: black;
 }
