--- a/podcast/templates/podcast/base.html
+++ b/podcast/templates/podcast/base.html
@@ -12,13 +12,13 @@
 	<div class="wrapper">
 		<header>
 		{% block header %}
-		<nav>
+		<!-- <nav>
 			<ul>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">About</a></li>
 				<li class="subscribe"><a href="#">Subscribe via. RSS</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 		{% endblock %}		
 		</header>
 		<div class="content">
@@ -26,7 +26,12 @@
 
 			{% endblock %}
 		</div>
-		<nav>
+		<div class="comments">
+			{% block comments %}
+
+			{% endblock %}
+		</div>
+		<!-- <nav>
 			<ul>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">About</a></li>
@@ -34,7 +39,7 @@
 				<li><a href="#">Contact</a></li>
 				<li class="subscribe"><a href="#">Subscribe via. RSS</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 		<div class="push"></div>
 	</div>
 	<footer>
