Added threaded comments app, with the intention of gutting it and using it as our threaded comments. Made some small changes but still need to add votes to the threaded comments model. Already I've updated such that several fields are removed in the model.

--- a/podcast/templates/podcast/episode_detail.html
+++ b/podcast/templates/podcast/episode_detail.html
@@ -174,7 +174,7 @@
                     <div class="comment_info">
                         <div class="comment_user">{{ comment.user_name }}</div>
                         <div class="comment_data">
-                            {{ comment.submit_date|date:"d M Y, H:i" }}
+                            {{ comment.user }} - {{ comment.submit_date|date:"d M Y, H:i" }} 
                           | <a href="#c{{ comment.id }}" data-comment-id="{{ comment.id }}" class="comment_reply_link">Reply</a>
                         </div>
                     </div>
